postcss/testData/inspections/mediaRanges/oneEqualSignOfTwo.pcss
@media (200px >= width
      <error descr="Equal operator is not allowed in this context">=</error> 300px){}